syntax = "proto3";
option java_multiple_files = true;
package etf.nwt.systemevents;

message EventRequest {
    string objectType = 1;
    string requestType = 2;
    string responseType = 3;
    string requestTimestamp = 4;
}

message EventResponse {
	string eventResponseText = 1;
}

service EventsService {
	rpc hello(EventRequest) returns (EventResponse);
}
